// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI component snapshots > Badge tones 1`] = `
<div>
  <span
    class="inline-flex items-center gap-1.5 text-xs px-2 py-0.5 rounded-full bg-surface-overlay text-fg-secondary "
  >
    默认
  </span>
  <span
    class="inline-flex items-center gap-1.5 text-xs px-2 py-0.5 rounded-full bg-success/15 text-success "
  >
    成功
  </span>
  <span
    class="inline-flex items-center gap-1.5 text-xs px-2 py-0.5 rounded-full bg-warning/15 text-warning "
  >
    警告
  </span>
</div>
`;

exports[`UI component snapshots > Button danger sm 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-medium transition-colors px-3 py-1.5 text-xs gap-1.5 bg-danger hover:bg-danger/90 text-white disabled:bg-surface-overlay disabled:text-fg-disabled focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-focus-ring focus-visible:ring-offset-2 focus-visible:ring-offset-surface-base disabled:cursor-not-allowed "
>
  删除
</button>
`;

exports[`UI component snapshots > Button primary 1`] = `
<button
  class="inline-flex items-center justify-center rounded-lg font-medium transition-colors px-4 py-2 text-sm gap-2 bg-surface-overlay hover:bg-border-strong text-white disabled:bg-surface-overlay disabled:text-fg-disabled focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-focus-ring focus-visible:ring-offset-2 focus-visible:ring-offset-surface-base disabled:cursor-not-allowed "
>
  保存
</button>
`;

exports[`UI component snapshots > Card 1`] = `
<div
  class="border rounded-xl bg-surface-raised border-border-subtle p-4 "
>
  <p>
    内容
  </p>
</div>
`;

exports[`UI component snapshots > EmptyState 1`] = `
<div
  class="flex flex-col items-center justify-center py-12 text-center"
>
  <h3
    class="text-lg font-medium text-gray-300"
  >
    暂无数据
  </h3>
  <p
    class="text-sm text-gray-500 mt-2 max-w-sm"
  >
    创建第一个目标开始使用
  </p>
  <div
    class="mt-6"
  >
    <button
      class="inline-flex items-center justify-center rounded-lg font-medium transition-colors px-4 py-2 text-sm gap-2 bg-surface-overlay hover:bg-border-strong text-white disabled:bg-surface-overlay disabled:text-fg-disabled focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-focus-ring focus-visible:ring-offset-2 focus-visible:ring-offset-surface-base disabled:cursor-not-allowed "
    >
      新建
    </button>
  </div>
</div>
`;
